--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "type": "module",
-    "scripts": {
+  "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@taquito/beacon-wallet": "^17.2.0",
+    "@taquito/signer": "^17.3.1",
     "@taquito/taquito": "^17.2.0",
     "@temple-wallet/dapp": "^8.0.0",
     "express": "^4.18.2"
