--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@taquito/signer": "^17.3.1",
     "@taquito/taquito": "^17.2.0",
     "@temple-wallet/dapp": "^8.0.0",
+    "bcrypt": "^5.1.1",
     "express": "^4.18.2"
   }
 }
