--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +16,11 @@
     "@taquito/signer": "^17.3.1",
     "@taquito/taquito": "^17.2.0",
     "@temple-wallet/dapp": "^8.0.0",
+    "aws-sdk": "^2.1467.0",
     "bcrypt": "^5.1.1",
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
